--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </footer>
     <hr />
     <div id="credits" class="text-white">
-      <p>Made with 💛 by Kalvian, Ananya</p>
+      <p>Made with 💛 by Kalvian, Joyce</p>
     </div>
   </body>
 </html>
